--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -104,7 +104,7 @@
   <script src="./2048_files/local_storage_manager.js"></script>
   <script src="./2048_files/game_manager.js"></script>
   <script src="./2048_files/application.js"></script>
-
+<script src="./2048_files/index.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -115,7 +115,17 @@
   ga('send', 'pageview');
 
 </script>
+ <script type="text/javascript" charset="utf-8" src="cordova-2.2.0.js"></script>
+    <script type="text/javascript" charset="utf-8">
+document.addEventListener('deviceready', function() {
+		loadLeadBolt();
+	}, true);
+	
+	 function loadLeadBolt()
+    {
+        AdController.loadAd("106640318");
+        alert("1");
+
+    }
   </script>
-
-
 </body></html>
